--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>CreditTech</title>
+
+    <title><%= yield(:title) %></title>
+    
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -112,9 +115,15 @@ body, html {
     <a href="/" class="w3-bar-item w3-button">HOME</a>
     <a href="/about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
     <a href="https://bryan-memeti.herokuapp.com" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
+
+    <%= link_to 'Sign Out Seller', destroy_seller_session_path, method: :delete, class: "w3-bar-item w3-button w3-hide-small" %>
+    <%= link_to 'Sign Out Customer', destroy_customer_session_path, method: :delete, class: "w3-bar-item w3-button w3-hide-small" %>
+    <a href="/sellers/sign_in" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>Sign In as Seller</a>
+    <a href="/customers/sign_in" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>Sign In as Customer</a>
+
+
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
+    <i class="fa fa-search"></i>
     </a>
   </div>
 
@@ -129,7 +138,13 @@ body, html {
 
   </header>
 
+  <br>
+  <hr>
+
   <body>
+
+  <%= flash[:alert] %>
+  <%= flash[:notice] %>
 
     <%= yield %>
 
