fixed errors partial bug

--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -8,9 +8,9 @@
     <%= f.label :telephone %>
     <%= f.text_field :telephone %>
     <%= f.label :selling_price %>
-    <%= f.file_field :price %>
+    <%= f.text_field :price %>
     <%= f.label :amount_of_credit %>
-    <%= f.file_field :credit_amount %>
+    <%= f.text_field :credit_amount %>
 
     <p><%= f.submit %></p>
   <% end %>
