--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,3 +1,25 @@
+<% content_for(:title, "All Items") %>
+
+<div class="container-fluid">
+
+<% if @trade_items.any? %>
+    <h4>Credits in Stock:</h4>
+
+    <hr>
+
+    <ul>
+      <% @trade_items.each do |credit| %>
+        <ol>
+          <p>Credit:<%= credit.credit_amount %> <p>Selling at:<%= credit.price %></p>
+          <p><%= link_to "Purchase", sellers_path, class: 'btn btn-primary' %><hr>
+        </ol>
+      <% end %>
+    </ul>
+
+  <% else %>
+    <p>No credits in stock!</p>
+  <% end %>
+
 <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
