--- a/app/views/sellers/index.html.erb
+++ b/app/views/sellers/index.html.erb
@@ -6,7 +6,9 @@
   <ul>
     <% @sellers.each do |seller| %>
       <ol><%= link_to seller.email %>
-      <p><%= link_to "View Profile", seller_path(seller), class: 'btn btn-primary' %><hr>
+      <p><%= link_to "View Profile", seller_path(seller), class: 'btn btn-primary' %>
+      <!-- Google Map -->
+      <hr>
       </ol>
     <% end %>
   </ul>
@@ -17,3 +19,62 @@
   <p>No sellers available!!!</p>
   <% end %>
 </div>
+
+<!-- Add Google Maps -->
+<div id="map"></div>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+ 
+    <script>
+      var map, infoWindow;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 6
+        });
+        infoWindow = new google.maps.InfoWindow;
+
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLBgOjVbd4YlVVbk75rpYR4F_fFtljVO0&callback=initMap">
+    </script>
+<!-- Add Google Maps -->
