--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -7,9 +7,7 @@
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">BRIEME <span class="w3-hide-small">TECH</span> TECHNOLOGIES</span><hr>
 
-    <p class="w3-center"><a href="/customers/sign_up" class="w3-button w3-black w3-round w3-padding-large w3-large">Register as a Customer</a></p><hr>
-
-   <p class="w3-center"><a href="/sellers/sign_up" class="w3-button w3-black w3-round w3-padding-large w3-large">Register as a Seller</a></p><hr>
+   <p class="w3-center"><a href="/users/sign_up" class="w3-button w3-black w3-round w3-padding-large w3-large">Register as a Seller</a></p><hr>
 
    <p class="w3-center"><a href="/trades" class="w3-button w3-black w3-round w3-padding-large w3-large">Trade</a></p><hr>
   </div>
