--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 
-<%= form_for [@seller, @credit] do |f| %>
+<%= form_for [@user, @credit] do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.label :telephone %>
