users current user to hide signing buttons

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -9,6 +9,8 @@
 
    <p class="w3-center"><a href="/users/sign_up" class="w3-button w3-black w3-round w3-padding-large w3-large">Register as a Seller</a></p><hr>
 
+   <p class="w3-center"><a href="/sellers" class="w3-button w3-black w3-round w3-padding-large w3-large">Sellers</a></p><hr>
+
    <p class="w3-center"><a href="/trades" class="w3-button w3-black w3-round w3-padding-large w3-large">Trade</a></p><hr>
   </div>
 </div>
