--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,12 +112,12 @@ body, html {
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="/about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
     <a href="https://bryan-memeti.herokuapp.com" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    
+
     <% if current_user %>
-    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "w3-bar-item w3-button w3-hide-small" %>
+    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class="w3-bar-item w3-button" %>
 
     <% else %>
-    <a href="/users/sign_in" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>Sign In as Seller</a>
+    <a href="/users/sign_in" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i>Sign In as Seller</a>
     <% end %>
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
