--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -1,7 +1,8 @@
-<% if @logged_user === @seller %>
+<% if current_user %>
 
 <!-- Add Google Maps -->
 <div id="map"></div>
+
     <style>
       #map {
         height: 50%;
@@ -13,7 +14,7 @@
       }
     </style>
 
-     <script>
+    <script>
       var map, infoWindow;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
