created a form partial

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,8 +1,1 @@
-<%= form_for @message do |f| %>
-<%= f.label :Message %>
-<%= f.text_field :messages %>
-<p><%= f.submit %></p>
-<% end %>
-
-<br>
-<hr>
+<%= render "form" %>
