refactored the layout and styling

--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -60,19 +60,16 @@
   <hr>
 <% end %>
 
-<p class="w3-xlarge">
-<button onclick="document.getElementById('id02').style.display='block'" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">Send Message</button></p>
-<hr>
+<br>
 
 
+<div class="row">
+
+<div class="col-md-6">
 <% content_for(:title, "Credits") %>
 
-<div class="container-fluid">
-
-<% if @seller.credits.any? %>
-    <h4>Credits in Stock:</h4>
-
-    <hr>
+  <% if @seller.credits.any? %>
+    <h4>Credits in Stock:</h4><br>
 
     <ul>
       <% @seller.credits.each do |credit| %>
@@ -80,9 +77,8 @@
           <p>Credit:<%= credit.credit_amount %> <p>Selling at:<%= credit.price %></p>
 
           <p class="w3-xlarge">
-          <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">Purchase</button></p><hr>
+          <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">Purchase</button></p>
           </p>
-        </div>
         </ol>
       <% end %>
     </ul>
@@ -91,10 +87,16 @@
     <p><%= @seller.email %> has no credits yet!</p>
   <% end %>
 
-<%= link_to "Stock", new_seller_credit_path(@seller),id: "new_link",class: 'btn btn-default' %>
+<%= link_to "Add Stock", new_seller_credit_path(@seller),id: "new_link",class: 'btn btn-default' %><hr>
 </div>
 
-<hr>
+<div class="col-md-6">
+  <p class="w3-xlarge">
+  <a href="/messages/new" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">Send Message</a>
+  </p>
+</div>
+
+</div>
 
 <!-- RSVP modal -->
 <div id="id01" class="w3-modal">
@@ -105,26 +107,6 @@
       <div class="w3-row">
         <div class="w3-half">
           <a href="#" onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-blue">Cancel Transaction</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- RSVP modal -->
-<div id="id02" class="w3-modal">
-  <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="padding:32px;max-width:600px">
-    <div class="w3-container w3-white w3-center">
-      <h1 class="w3-wide">You want to Transact?</h1>
-      <p>I really hope this platfoam suites you!</p>
-        <%= render "message" %>
-      <p><i>Sincerely, Bryan Memeti</i></p>
-      <div class="w3-row">
-        <div class="w3-half">
-          <button onclick="document.getElementById('id02').style.display='none'" type="button" class="w3-button w3-block w3-red">Send</button>
-        </div>
-        <div class="w3-half">
-          <a href="#" onclick="document.getElementById('id02').style.display='none'" type="button" class="w3-button w3-block w3-blue">Cancel</a>
         </div>
       </div>
     </div>
