--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -19,7 +19,7 @@
           <p>Seller:<%= credit.name %></p>
           <p>Location:<%= credit.location %></p>
           <p>Credit:<%= credit.credit_amount %> <p>Selling at:<%= credit.price %></p>
-          <p><%= link_to "Purchase", sellers_path, class: 'btn btn-primary' %><hr>
+          <p><%= link_to "Purchase", seller_path(credit.user_id), class: 'btn btn-primary' %><hr>
         </ol>
       <% end %>
     </ul>
