--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -110,12 +110,12 @@
         <i class="fa fa-cc-paypal" style="font-size:48px;color:red"></i>
         <i class="fa fa-google-wallet" style="font-size:48px;color:red"></i>
         <i class="fa fa-cc-mastercard" style="font-size:48px;color:red"></i>
-        <i class="fa fa-cc-stripe" style="font-size:48px;color:red"></i>
+        <a href="/sellers" class="fa fa-cc-stripe" style="font-size:48px;color:red"></a>
       </div>
 
       <div class="w3-row">
         <div class="w3-half">
-          <a href="#" onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-blue">Cancel Transaction</a>
+          <a onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-blue">Cancel Transaction</a>
         </div>
       </div>
     </div>
