successfully implemented stripe payment

--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -110,7 +110,7 @@
         <i class="fa fa-cc-paypal" style="font-size:48px;color:red"></i>
         <i class="fa fa-google-wallet" style="font-size:48px;color:red"></i>
         <i class="fa fa-cc-mastercard" style="font-size:48px;color:red"></i>
-        <a href="/sellers" class="fa fa-cc-stripe" style="font-size:48px;color:red"></a>
+        <a href="/charges/new" class="fa fa-cc-stripe" style="font-size:48px;color:red"></a>
       </div>
 
       <div class="w3-row">
