restrictted creating of inventory to only the account user

--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -87,7 +87,11 @@
     <p><%= @seller.email %> has no credits yet!</p>
   <% end %>
 
+<% if current_user === @seller %>
+
 <%= link_to "Add Stock", new_seller_credit_path(@seller),id: "new_link",class: 'btn btn-default' %><hr>
+<% else %>
+<% end %>
 </div>
 
 <div class="col-md-6">
