--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -116,7 +116,7 @@ body, html {
 
     <% if current_user %>
     <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "w3-bar-item w3-button" %>
-    <%= link_to 'My Account', seller_path(current_user), class: "w3-bar-item w3-button w3-hide-small" %>
+    <%= link_to 'My Account', seller_path(current_user), class: "w3-bar-item w3-button" %>
 
     <% else %>
     <a href="/users/sign_in" class="w3-bar-item w3-button">Sign In as Seller</a>
