added voting gem

--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -89,7 +89,7 @@
 
 <% if current_user === @seller %>
 
-<%= link_to "Add Stock", new_seller_credit_path(@seller),id: "new_link",class: 'btn btn-default' %><hr>
+<%= link_to "Add Stock", new_seller_credit_path(@seller), class: 'btn btn-default' %><hr>
 <% else %>
 <% end %>
 </div>
