adde pagination gem

--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= form_tag(trades_path, method: :get) do %>
   <%= text_field_tag :term, params[:term] %>
-  <%= submit_tag 'Search', name: nil %>
+  <%= submit_tag 'Search by Location', name: nil %>
 <% end %>
 
     <h4>Credits in Stock:</h4>
