--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 
-<% if @trade_items.any? %>
+<% if @products.any? %>
 
 <%= form_tag(trades_path, method: :get) do %>
   <%= text_field_tag :term, params[:term] %>
@@ -14,7 +14,7 @@
     <hr>
 
     <ul>
-      <% @trade_items.each do |credit| %>
+      <% @products.each do |credit| %>
         <ol>
           <p>Seller:<%= credit.name %></p>
           <p>Location:<%= credit.location %></p>
@@ -28,9 +28,11 @@
     <p>No credits in stock!</p>
   <% end %>
 
+  
+
 <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-    <%= will_paginate @products %>
+      <%= will_paginate @products %>
     </div>
   </div>
