styles the seller profile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,3 +36,7 @@ body {
 	padding: 120px;
 	background-image: url(https://cdn.pixabay.com/photo/2015/02/02/11/09/office-620822_960_720.jpg);
 }
+
+.seller_profile{
+  background-image: url(https://cdn.pixabay.com/photo/2017/05/24/21/33/workplace-2341642_960_720.jpg);
+}
