--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -85,10 +85,17 @@
 
 <% if current_user === @seller %>
 
-<%= link_to "Add Stock", new_seller_credit_path(@seller), class: 'btn btn-info' %>
+<%= link_to "Add Stock", new_seller_credit_path(@seller), class: "w3-button w3-round w3-blue w3-opacity w3-hover-opacity-off" %>
 <hr>
 <% else %>
 <% end %>
+
+<!-- Pagination -->
+  <div class="w3-center w3-padding-32">
+    <div class="w3-bar">
+      <%= will_paginate @products %>
+    </div>
+  </div>
 
   <p class="w3-xlarge">
   <a href="/messages/new" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">Send Message</a>
